--- a/flex/style.css
+++ b/flex/style.css
@@ -58,7 +58,7 @@ h1{
     line-height: 64px;
     text-align: center;
     margin-top: 0px;
-    color: #FFFFFF;
+    color: #fafafa;
 }
 .btn-our-projects{
     background: #4985FF;
